# fixing-naked-NPCs

./: .gitignore  CMakeLists.txt  NPCOutfitFixer.ini  README.md  exports.def  vcpkg-configuration.json  vcpkg.json
build-manual/: NPCOutfitFixer.exp  NPCOutfitFixer.lib
build-vs/: CMakeCache.txt
src/: PCH.h  Settings.h  VisibilityFixer.cpp  VisibilityFixer.h  main.cpp
